<resources>
    <string name="app_name"><font color='#000000'>Out</font><font color='#4A99ED'>Perform</font></string>
    <string name="logodescription">OutperformLogo</string>
    <string name="greet_login">Hi! Welcome to</string>
    <string name="login_description">First you need to login so we can make adjustments to your account</string>
    <string name="login">Login</string>
    <string name="btn_google_login">Connect with Google</string>
    <string name="btn_facebook_login">Connect With Facebook</string>
    <string name="pass_signin">Sign In With Password</string>
    <string name="sign_up"><font color='#898989'>Don’t have an account?</font><font color='#4A99ED'> Sign up</font></string>
    <string name="log_in"><font color='#898989'>Already have an account?</font><font color='#4A99ED'> Log In</font></string>
    <string name="your_account">to your account</string>
    <string name="pass_login">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="signUp">Don’t have an account? Sign up</string>
    <string name="register">Register</string>
    <string name="login_now">login now</string>
    <!-- Strings used for fragments for navigation -->
    <string name="register_your_account">to create your account</string>
    <string name="full_name">Full name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="password_confirmaton_hint">Password Confirmation</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_attendance">Attendance</string>
    <string name="client_id">1053351222036-ekud8l21pj6ss7rhdk930h48595dhqo7.apps.googleusercontent.com</string>
    <string name="sign_out">Log Out</string>
    <string name="facebook_app_id">570253492733448</string>
    <string name="profile_placeholder">placeholder image for profile picture</string>
    <string name="time_placeholder">09:10 AM</string>
    <string name="date_placeholder">March 12, 2024 - Saturday</string>
    <string name="placeholder_percent">94%</string>
    <string name="percent_desc">Overall Attendance</string>
    <string name="clock_in">Clock In</string>
    <string name="time">--:--</string>
    <string name="clock_out">Clock Out</string>
    <string name="total_hrs">Total Hrs</string>
    <string name="role_placeholder">Staff</string>
    <string name="clock_in_button">Clock In</string>
    <string name="task_label">Your Task</string>
    <string name="link_google_account">Link Google Account</string>
    <string name="google_login_notice">Email needs to be linked with Google for proper multi auth access, \nplease link account using google after logging in.</string>
    <string name="team_label">Team</string>
    <string name="title_leaderboard">LeaderBoard</string>
    <string name="title_outlet">Outlet</string>
    <string name="title_profile">Profile</string>
    <string name="name_format">Name : %1$s</string>
    <string name="age_format">Age : %1$s</string>
    <string name="role_format">Role : %1$s</string>
    <string name="payroll_format">Payroll : %1$s</string>
    <string name="team_format">Team : %1$s</string>
    <string name="outlet_format">Outlet : %1$s</string>
    <string name="personalization_label">Personalization</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="placeholder_name">User</string>
    <string name="placolder_role">Role</string>
    <string name="age">Age</string>

    <string name="profile_header">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="permissions">Permissions</string>

    <string name="notifications_header">Notifications</string>

    <string name="personalization_header">Personalization</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>

    <string name="more_header">More</string>
    <string name="about_application">About Application</string>
    <string name="help">Help</string>
    <string name="outlet_label">Your Outlet</string>
    <string name="outlet_placeholder">Outlet_Name</string>
    <string name="outlet_location_placeholder">Outlet Location</string>
    <string name="placeholder_outlet_name">Outlet</string>
    <string name="outlet_manager_format">Manager : %1$s</string>
    <string name="size_format">Size : %1$s</string>
    <string name="outlet_address_format">Address : %1$s</string>
    <string name="staff_title">Staff</string>
    <string name="description_format">Description : %1$s</string>
    <string name="outletId_format">Outlet Id : %1$s</string>
    <string name="created_format">Created At : %1$s</string>
    <string name="placeholder_team_name">Team</string>
    <string name="team_id_format">Team ID : %1$s</string>
    <string name="team_task_label">Tasks</string>
    <string name="evidence_label">Evidence</string>
    <string name="description_label">Description</string>
    <string name="formatted_completion">%1$s/%2$s</string>
    <string name="taskEdit_label">Task</string>
    <string name="add_image_desc">Add Image</string>
    <string name="evidence_image_desc">Evidence Image</string>
    <string name="file_provider_label">Outperform FileProvider</string>
    <string name="submit_task_btn">Submit Task</string>
    <string name="task_completion_format">Task Completion: %1$s/%2$s</string>
    <string name="add_outlet">Add Outlet</string>
    <string name="image_label">Image</string>
    <string name="location_label">Location</string>
    <string name="outlet_hint">Outlet Name</string>
    <string name="location_hint">Location Name</string>
    <string name="btn_create_outlet">Create Outlet</string>
    <string name="outlet_create_label">Create Outlet</string>
    <string name="add_staff_label">Add Staff</string>
    <string name="add_team_label">Add Team</string>
    <string name="add_team_image_description">"Add team image "</string>
    <string name="create_team_btn">Create Team</string>
    <string name="team_image_label">Team Image</string>
    <string name="team_name_hint">Enter team name</string>
    <string name="team_name_label">Team Name</string>
    <string name="add_task_label">Add Task</string>
    <string name="task_status">Status</string>
    <string name="title_task">Task Title</string>
    <string name="category">Category</string>
    <string name="daily">Daily</string>
    <string name="once">Once</string>
    <string name="due_date">Due Date</string>
    <string name="write_due_date">Write Due Date</string>
    <string name="submission">Submission</string>
    <string name="due_date_hint">Due Date (YYYY-MM-DD)</string>
    <string name="task_image">Task Image</string>
    <string name="hint_submission">0</string>
    <string name="btn_create_task">Create Task</string>
    <string name="best_outlet_label">Best Outlet</string>
    <string name="best_team_label">Best Team</string>
    <string name="formatted_task">" %1$s tasks today"</string>
    <string name="format_revenue">Monthly Revenue : %1$s</string>
    <string name="formatted_completion_rate">Completion Rate :  %1$.1f%%</string>
    <string name="clock_out_button">Clock Out</string>
    <string name="btn_change_password">Change Password</string>
    <string name="change_password_label">New Password</string>
    <string name="leave_request_label">Leave Request</string>
    <string name="leave_username_label">Name</string>
    <string name="leave_username_hint">Applicant Name</string>
    <string name="reason_label">Reason</string>
    <string name="from">from</string>
    <string name="date_time_hint">Date and Time</string>
    <string name="until">Until</string>
    <string name="btn_approve_leave">Approve</string>
    <string name="btn_reject_leave">Reject</string>
    <string name="btn_request_leave">Request Leave</string>
    <string name="submitted_by">Submitted By : %1$s</string>
    <string name="created_by">Created By : %1$s</string>

</resources>