<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="4dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/taskEdit_label"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:hint="@string/title_task"
                android:background="@drawable/task_input_background"
                android:inputType="text"
                android:padding="12dp" />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/description_label"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/description_label"
                android:gravity="top"
                android:background="@drawable/task_input_background"
                android:padding="12dp" />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/category"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <RadioGroup android:id="@+id/rgCategory"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbDaily"
                    android:text="@string/daily"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbOnce"
                    android:text="@string/once"/>
            </RadioGroup>


            <TextView
                android:text="@string/due_date"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/due_date_hint" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submission"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etSubmissionsPerDay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="@string/hint_submission"
                android:background="@drawable/task_input_background"
                android:padding="12dp" />

            <!-- Image Picker -->
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/task_image"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <ImageView
                android:id="@+id/ivTaskImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/add_button_bg"
                android:src="@drawable/ic_add_"
                android:scaleType="center"
                android:contentDescription="@string/add_image_desc" />

            <!-- Submit Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_create_task"
                android:layout_marginTop="16dp"
                app:cornerRadius="16dp"
                android:theme="@style/Theme.Dashboard"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>