<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

   >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:orientation="vertical">

        <!-- Outlet Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_outlet_name"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etOutletName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/task_input_background"
            android:padding="12dp"
            android:hint="@string/outlet_hint"/>

        <!-- Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/task_input_background"
            android:padding="12dp"
            android:hint="@string/location_hint" />

        <!-- Image Picker -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_label"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp" />

        <ImageView
            android:id="@+id/ivImagePicker"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/add_button_bg"
            android:src="@drawable/ic_add_"
            android:scaleType="center"
            android:contentDescription="@string/add_image_desc" />

        <!-- Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateOutlet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_create_outlet"
            android:backgroundTint="@color/brandBlue"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>