<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="12dp"
        card_view:cardElevation="4dp"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/ctgStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingVertical="6dp"
                android:text="Status"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/brandBlue"
                android:background="@drawable/bug_rounded_blue"
                android:textSize="12sp"
                android:gravity="end"
                android:layout_gravity="end" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/leave_username_label"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:hint="@string/leave_username_hint"
                android:background="@drawable/task_input_background"
                android:inputType="text"
                android:padding="12dp" />


            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/reason_label"
                android:textStyle="bold"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etReason"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/reason_label"
                android:gravity="top"
                android:background="@drawable/task_input_background"
                android:padding="12dp" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radio_full_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Day"
                    android:background="@drawable/bg_radio_selected"
                    android:button="@null"
                    android:textColor="@android:color/white"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginEnd="8dp"/>

                <RadioButton
                    android:id="@+id/radio_early_leave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Early Leave"
                    android:button="@null"
                    android:background="@drawable/bg_radio_unselected"
                    android:textColor="@color/brandBlue"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="6dp"
                    android:textSize="@dimen/text_size_medium" />
            </RadioGroup>

            <TextView
                android:text="@string/from"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/date_time_hint" />

            <TextView
                android:text="@string/until"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"/>
            <EditText
                android:id="@+id/etUntil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:hint="@string/date_time_hint" />

            <!-- Submit Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_approve_leave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_approve_leave"
                android:layout_marginTop="16dp"
                app:cornerRadius="16dp"
                android:visibility="gone"
                android:theme="@style/Theme.Dashboard"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reject_leave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_reject_leave"
                android:layout_marginTop="16dp"
                app:cornerRadius="16dp"
                android:visibility="gone"
                android:theme="@style/Theme.Dashboard"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/dark_red"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>