<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <!-- Image on the left -->
        <ImageView
            android:id="@+id/imgTeam"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_user"
            android:alpha="0.5"
            />

        <!-- Text content on the right -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/padding_medium"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/placeholder_team_name"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end" />


            <TextView
                android:id="@+id/tvTeamSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/size_format" />

            <TextView
                android:id="@+id/tvTeamDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/description_format" />

            <TextView
                android:id="@+id/tvCompletionRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formatted_completion_rate"
                android:visibility="gone"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                android:ellipsize="end" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>